making titles clickable

--- a/theme.html
+++ b/theme.html
@@ -821,7 +821,7 @@ ol.CodeRay li { white-space: pre }
 						<div title="This is a {Tag} tip. [Click to only show {Tag} tips]" class="tag {Tag}"><a href="http://rubyquicktips.tumblr.com/tagged/{Tag}"></a></div>
 					{/block:Tags}
 				{/block:HasTags}
-				{block:Title}<h2>{Title}</h2>{/block:Title}
+				{block:Title}<h2><a href="{Permalink}">{Title}</a></h2>{/block:Title}
 				{Body}
 		</div>{/block:Regular}
 		{block:Photo}<div class="photo">
